# Web-Scanner

./: .gitignore  LEGAL.md  README.md  pyproject.toml  requirements.txt  scratch_test.py
asfoor/: __main__.py  main.py
asfoor/core/: config_loader.py  models.py  orchestrator.py
asfoor/modules/: api_scan.py  crawler.py  cve_db.py  cve_lookup.py  dir_scan.py  fingerprint.py  info_disclosure.py  injection_detector.py  link_finder.py  port_scan.py  report.py  subdomain_scan.py  xss_detector.py
asfoor/templates/: report.html.j2
asfoor/utils/: banner.py  date_chunking.py  http_client.py  logger.py  nvd_rate_limiter.py  rate_limiter.py  validators.py  wappalyzer_compat.py  wordlist_utils.py
config/: config.yaml  logging.yaml
data/signatures/: technologies.json
data/wordlists/: README.md  common_dirs.txt  sensitive_files.txt
seclists/directory_discovery/: small.txt
seclists/sensitive_files_discovery/: large.txt  medium.txt  small.txt
