[project]
name = "3asfoor"
version = "1.0.0"
description = "3asfoor — web recon & vulnerability scanner (tech fingerprinting, CVE lookup, port scan, passive+active path discovery) — graduation project"
requires-python = ">=3.11"

[project.scripts]
3asfoor = "asfoor.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asfoor", "asfoor.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
